objects/JLOC_Attendee__c.object
<CustomObject>
    <fields>
        <fullName>Approved_Subject_to__c</fullName>
        <label>Approved Subject to</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coverage</fullName>
                </value>
                <value>
                    <fullName>Investment Banking</fullName>
                </value>
                <value>
                    <fullName>Portfolio Management</fullName>
                </value>
                <value>
                    <fullName>Markets</fullName>
                </value>
                <value>
                    <fullName>Trade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invited_F__c</fullName>
        <formula>IF(Invited__c, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invited F</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JLOC__c</fullName>
        <label>JLOC</label>
        <referenceTo>JLOC__c</referenceTo>
        <relationshipLabel>JLOC Attendees</relationshipLabel>
        <relationshipName>JLOC_Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Present_F__c</fullName>
        <formula>IF(Present__c, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <label>Present F</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Present__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>JLOC_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vote__c</fullName>
        <label>Vote</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Approved Subject to</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>JLOC Attendee</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>JLOC Attendee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JLOC Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Prevent_from_changing_JLOC_Attendee</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(User__c)</errorConditionFormula>
        <errorDisplayField>User__c</errorDisplayField>
        <errorMessage>Please don&apos;t change the value of this field.</errorMessage>
    </validationRules>
</CustomObject>